[package]
name = "vee"
version = "0.1.5"
rust-version = "1.85.0"
edition = "2024"
description = "Vector Expression Emitter (VEE): Geometric Algebra Code Generator"
documentation = "https://docs.rs/vee"
repository = "https://github.com/qu1x/vee"
authors = ["Rouven Spreckels <rs@qu1x.dev>"]
license = "MPL-2.0"
keywords = [
	"geometric-algebra",
]
categories = [
	"science",
	"graphics",
	"mathematics",
	"game-development",
]
include = [
	"src/**/*.rs",
	"tests/**/*.rs",
	"tests/**/*.ct",
	"katex.html",
	"Cargo.toml",
	"README.md",
	"RELEASES.md",
	"LICENSE-MPL",
]

[package.metadata.docs.rs]
cargo-args = ["-Z", "unstable-options", "-Z", "rustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex.html"]

[dependencies]
pretty_assertions = { version = "1.4.1", optional = true }

[dev-dependencies]
vee = { path = ".", features = ["pretty_assertions"] }

[lints.rust]
missing-docs = "forbid"
confusable_idents = "allow"

[lints.rustdoc]
broken-intra-doc-links = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
